[package]
name = "token-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
lazy_static = "1.4"
regex = "1.10"
dirs = "5.0"
thiserror = "1.0"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.20.0"
